完成dac\ds18b20测试

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,9 @@ build_flags =
 	-D I2C1_SDA_PIN=19
 	-D I2C2_SCL_PIN=18
 	-D I2C2_SDA_PIN=5
+	-D ONEBUS_PIN=25
 	-D U8X8_HAVE_2ND_HW_I2C
 lib_deps = 
 	olikraus/U8g2@^2.35.9
+	adafruit/Adafruit MCP4725@^2.0.2
+	paulstoffregen/OneWire@^2.3.8
