实现目标电流设置  修复温度采集问题  增加温度控制风扇转速功能,温度过高停机功能  UI界面显示温度和风扇转速比例

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ build_flags =
 	-D ENCORD_B_PIN=39
 	-D ENCORD_K_PIN=34
 	-D V_SWITCH_PIN=23
+	-D FAN_PIN=22
 	-D I2C1_SCL_PIN=21
 	-D I2C1_SDA_PIN=19
 	-D I2C2_SCL_PIN=18
